--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -1,6 +1,5 @@
-@forward './colors';
-@forward './global';
-@forward './mixins';
-@forward './reset';
-@forward './typography';
-@forward './variables';
+@forward "./global";
+@forward "./mixins";
+@forward "./reset";
+@forward "./typography";
+@forward "./variables";
