--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -10,6 +10,7 @@
     url("../assets/Images/hero-shows.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
   height: 16rem;
   width: 100%;
   position: relative;
@@ -23,9 +24,9 @@
     height: 42rem;
   }
 
-  &__text-section {
-    width: 50%;
-  }
+  // &__text-section {
+  //   width: 50%;
+  // }
 
   &__album {
     @include page-header-mobile-font;
@@ -38,6 +39,7 @@
 
     @include tablet {
       @include page-header-desktop-font;
+      font-size: 1.5rem;
       top: 0;
     }
   }
@@ -53,7 +55,8 @@
 
     @include tablet {
       @include page-header-desktop-font;
-      top: 0;
+      font-size: 2.5rem;
+      top: 50%;
     }
 
     @include desktop {
@@ -71,27 +74,28 @@
     border-radius: 5px;
 
     @include tablet {
+      width: 50%;
+      padding-left: 4rem;
     }
   }
 }
 
 //shows
 .shows {
-  padding: 1rem 1rem;
+  // padding: 1rem 1rem;
 
   &__title {
     @include section-header-mobile-font;
-    padding-bottom: 0.6rem;
+    padding: 1rem 1rem 0.6rem 1rem;
   }
 }
 
 .show-card {
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border-bottom: 1px solid $secondary-text;
   &__titles {
     display: none;
-  }
-
-  &__component {
-    margin-bottom: 0.8rem;
   }
 
   &__label {
@@ -99,11 +103,13 @@
     font-weight: 600;
     text-transform: uppercase;
     color: $secondary-text;
+    margin-bottom: 0.3rem;
   }
 
   &__info {
     @include body-copy-mobile-font;
     font-weight: 600;
+    margin-bottom: 0.5rem;
   }
 
   &__button {
