--- a/styles/shows.css
+++ b/styles/shows.css
@@ -285,24 +285,55 @@ html {
   font-family: "AvenirNext LT Pro";
 }
 
-.hero {
+.hero-section {
   background-image: linear-gradient(to right bottom, rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url("../assets/Images/hero-shows.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 16rem;
+  height: 15rem;
   width: 100%;
-  position: relative;
+}
+@media screen and (min-width: 786px) {
+  .hero-section {
+    height: 30rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero-section {
+    height: 50rem;
+  }
+}
+
+.hero {
+  padding-top: 1rem;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 @media screen and (min-width: 786px) {
   .hero {
-    height: 31rem;
     display: flex;
+    flex-direction: column;
   }
 }
 @media screen and (min-width: 1280px) {
   .hero {
-    height: 42rem;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+    padding: 15rem 5rem 5rem 5rem;
+  }
+}
+@media screen and (min-width: 786px) {
+  .hero__text-section {
+    padding-left: 2rem;
+    padding-top: 1rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__text-section {
+    width: 100%;
+    padding: 0;
   }
 }
 .hero__album {
@@ -313,8 +344,6 @@ html {
   font-weight: 400;
   color: #fff;
   padding-left: 1rem;
-  position: absolute;
-  top: 9%;
 }
 @media screen and (min-width: 786px) {
   .hero__album {
@@ -322,7 +351,11 @@ html {
     line-height: 4.25rem;
     font-weight: 600;
     font-size: 1.5rem;
-    top: 0;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__album {
+    padding: 0;
   }
 }
 .hero__text {
@@ -331,9 +364,7 @@ html {
   font-weight: 600;
   font-size: 1.4rem;
   color: #fff;
-  padding-left: 1rem;
-  position: absolute;
-  top: 25%;
+  padding: 0.5rem 0 0 1rem;
   width: 80%;
 }
 @media screen and (min-width: 786px) {
@@ -341,45 +372,96 @@ html {
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 600;
-    font-size: 2.5rem;
-    top: 50%;
+    font-size: 4rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .hero__text {
-    padding-left: 6rem;
+    padding: 0 2rem 0 0;
+    width: 100%;
   }
 }
 .hero__song {
-  position: absolute;
-  top: 55%;
   height: 85px;
   width: 94%;
   border: none;
-  padding-left: 1rem;
   border-radius: 5px;
+  padding: 0.5rem 0 0 1rem;
 }
 @media screen and (min-width: 786px) {
   .hero__song {
-    width: 50%;
-    padding-left: 4rem;
+    width: 60%;
+    height: 150px;
+    margin-top: 2rem;
+    padding-left: 3rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__song {
+    width: 80%;
   }
 }
 
-.shows__title {
+.shows-container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+.shows-container__title {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 600;
-  padding: 1rem 1rem 0.6rem 1rem;
+  padding: 2rem 1rem 0.6rem 1rem;
+}
+@media screen and (min-width: 786px) {
+  .shows-container__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    padding: 2rem 1rem 2rem 3rem;
+  }
+}
+
+.tablet-labels {
+  display: none;
+}
+@media screen and (min-width: 786px) {
+  .tablet-labels {
+    display: flex;
+    justify-content: flex-start;
+    padding: 0 3rem;
+    width: 76%;
+  }
+  .tablet-labels__label {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+    font-weight: 600;
+    flex: 1;
+  }
+}
+
+@media screen and (min-width: 786px) {
+  .show-cards {
+    padding: 0 2rem;
+  }
 }
 
 .show-card {
   margin-bottom: 1rem;
-  padding: 1rem;
-  border-bottom: 1px solid #afafaf;
+  padding: 0 1rem 1rem 1rem;
+  border-bottom: 1px solid #e1e1e1;
 }
-.show-card__titles {
-  display: none;
+.show-card > * {
+  flex: 1;
+}
+@media screen and (min-width: 786px) {
+  .show-card {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 0;
+    padding: 1rem;
+  }
 }
 .show-card__label {
   font-size: 0.625rem;
@@ -390,6 +472,11 @@ html {
   color: #afafaf;
   margin-bottom: 0.3rem;
 }
+@media screen and (min-width: 786px) {
+  .show-card__label {
+    display: none;
+  }
+}
 .show-card__info {
   font-size: 0.8125rem;
   line-height: 1.125rem;
@@ -397,6 +484,20 @@ html {
   font-weight: 600;
   margin-bottom: 0.5rem;
 }
+@media screen and (min-width: 786px) {
+  .show-card__info {
+    margin-bottom: 0;
+  }
+}
 .show-card__button {
   margin-top: 0.2rem;
+}
+@media screen and (min-width: 786px) {
+  .show-card__button {
+    width: 20%;
+  }
+}
+
+.show-card:last-child {
+  margin-bottom: 2rem;
 }/*# sourceMappingURL=shows.css.map */
