--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,7 +1,7 @@
 @use "./partials/index" as *;
 
 //hero
-.hero {
+.hero-section {
   background-image: linear-gradient(
       to right bottom,
       rgba($color: $primary-background, $alpha: 0.5),
@@ -11,22 +11,49 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 16rem;
+  height: 15rem;
   width: 100%;
-  position: relative;
+  // position: relative;
 
   @include tablet {
-    height: 31rem;
-    display: flex;
+    height: 30rem;
+    // display: flex;
   }
 
   @include desktop {
-    height: 42rem;
+    height: 50rem;
+  }
+}
+
+.hero {
+  padding-top: 1rem;
+  max-width: 1280px;
+  margin: 0 auto;
+
+  @include tablet {
+    display: flex;
+    flex-direction: column;
   }
 
-  // &__text-section {
-  //   width: 50%;
-  // }
+  @include desktop {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+    padding: 15rem 5rem 5rem 5rem;
+  }
+
+  &__text-section {
+    @include tablet {
+      padding-left: 2rem;
+      padding-top: 1rem;
+    }
+    @include desktop {
+      width: 100%;
+      // margin: auto auto;
+      padding: 0;
+    }
+  }
 
   &__album {
     @include page-header-mobile-font;
@@ -34,13 +61,16 @@
     font-weight: 400;
     color: #fff;
     padding-left: 1rem;
-    position: absolute;
-    top: 9%;
+    // position: absolute;
+    // top: 9%;
 
     @include tablet {
       @include page-header-desktop-font;
       font-size: 1.5rem;
-      top: 0;
+    }
+
+    @include desktop {
+      padding: 0;
     }
   }
 
@@ -48,54 +78,103 @@
     @include page-header-mobile-font;
     font-size: 1.4rem;
     color: $primary-text;
-    padding-left: 1rem;
-    position: absolute;
-    top: 25%;
+    padding: 0.5rem 0 0 1rem;
+    // padding-left: 1rem;
+    // padding-top: 1rem;
+    // position: absolute;
+    // top: 25%;
     width: 80%;
 
     @include tablet {
       @include page-header-desktop-font;
-      font-size: 2.5rem;
-      top: 50%;
+      font-size: 4rem;
+      // top: 50%;
     }
 
     @include desktop {
-      padding-left: 6rem;
+      padding: 0 2rem 0 0;
+      width: 100%;
     }
   }
 
   &__song {
-    position: absolute;
-    top: 55%;
+    // position: absolute;
+    // top: 55%;
     height: 85px;
     width: 94%;
     border: none;
-    padding-left: 1rem;
+    // padding-left: 1rem;
     border-radius: 5px;
+    // padding-top: 1rem;
+    padding: 0.5rem 0 0 1rem;
 
     @include tablet {
-      width: 50%;
-      padding-left: 4rem;
+      width: 60%;
+      height: 150px;
+      margin-top: 2rem;
+      padding-left: 3rem;
+    }
+
+    @include desktop {
+      width: 80%;
     }
   }
 }
 
 //shows
-.shows {
+.shows-container {
   // padding: 1rem 1rem;
+  max-width: 1280px;
+  margin: 0 auto;
 
   &__title {
     @include section-header-mobile-font;
-    padding: 1rem 1rem 0.6rem 1rem;
+    padding: 2rem 1rem 0.6rem 1rem;
+
+    @include tablet {
+      @include section-header-desktop-font;
+      padding: 2rem 1rem 2rem 3rem;
+    }
   }
 }
 
+.tablet-labels {
+  display: none;
+
+  @include tablet {
+    display: flex;
+    justify-content: flex-start;
+    padding: 0 3rem;
+    width: 76%;
+
+    &__label {
+      @include body-copy-desktop-font;
+      font-weight: 600;
+      flex: 1;
+    }
+  }
+}
+
+.show-cards {
+  @include tablet {
+    padding: 0 2rem;
+  }
+}
 .show-card {
   margin-bottom: 1rem;
-  padding: 1rem;
-  border-bottom: 1px solid $secondary-text;
-  &__titles {
-    display: none;
+  padding: 0 1rem 1rem 1rem;
+  border-bottom: 1px solid $secondary-inactive;
+
+  & > * {
+    flex: 1;
+  }
+
+  @include tablet {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 0;
+    padding: 1rem;
   }
 
   &__label {
@@ -104,15 +183,31 @@
     text-transform: uppercase;
     color: $secondary-text;
     margin-bottom: 0.3rem;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__info {
     @include body-copy-mobile-font;
     font-weight: 600;
     margin-bottom: 0.5rem;
+
+    @include tablet {
+      margin-bottom: 0;
+    }
   }
 
   &__button {
     margin-top: 0.2rem;
+
+    @include tablet {
+      width: 20%;
+    }
   }
+}
+
+.show-card:last-child {
+  margin-bottom: 2rem;
 }
