--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,36 +1,33 @@
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff")
+  src: url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff")
       format("woff"),
-    url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff2")
+    url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff2")
       format("woff2"),
-    url("../../assets/Font/Avenir-TTF/AvenirNextLTPro.ttf") format("ttf"),
-    url("../../assets/Font/Avenir-OTF/AvenirNextLTPro-Regular.otf")
-      format("otf");
+    url("../assets/Font/Avenir-TTF/AvenirNextLTPro.ttf") format("ttf"),
+    url("../assets/Font/Avenir-OTF/AvenirNextLTPro-Regular.otf") format("otf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff")
+  src: url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff")
       format("woff"),
-    url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff2")
-      format("woff2"),
-    url("../../assets/Font/Avenir-TTF/AvenirNextLTProDemi.ttf") format("ttf"),
-    url("../../assets/Font/Avenir-OTF/AvenirNextLTPro-Demi.otf") format("otf");
+    url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff2") format("woff2"),
+    url("../assets/Font/Avenir-TTF/AvenirNextLTProDemi.ttf") format("ttf"),
+    url("../assets/Font/Avenir-OTF/AvenirNextLTPro-Demi.otf") format("otf");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff")
+  src: url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff")
       format("woff"),
-    url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff2")
-      format("woff2"),
-    url("../../assets/Font/Avenir-TTF/AvenirNextLTProBold.ttf") format("ttf"),
-    url("../../assets/Font/Avenir-OTF/AvenirNextLTPro-Bold.otf") format("otf");
+    url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff2") format("woff2"),
+    url("../assets/Font/Avenir-TTF/AvenirNextLTProBold.ttf") format("ttf"),
+    url("../assets/Font/Avenir-OTF/AvenirNextLTPro-Bold.otf") format("otf");
   font-weight: 700;
   font-style: normal;
 }
