--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -2,18 +2,18 @@
 
 //hero
 .hero-section {
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($color: $primary-background, $alpha: 0.5),
-      rgba($color: $primary-background, $alpha: 0.5)
-    ),
-    url("../assets/Images/hero-shows.jpg");
+  background-image: url("../assets/Images/hero-shows.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   height: 15rem;
   width: 100%;
-  // position: relative;
+
+  &--overlay {
+    background-color: rgba($color: primary-background, $alpha: 0.5);
+    width: 100%;
+    height: 100%;
+  }
 
   @include tablet {
     height: 30rem;
